--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,68 +1,139 @@
-.flex {
-  display: flex;
+.container {
+  max-width: 100%;
+  padding: 0 60px;
+  border-top: 1px solid #ccc;;
 }
-.flex-align {
+
+.header {
+  margin-bottom: 20px;
+}
+
+.flat-container {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.flat-row {
+  width: 100%;
+  display: flex;
   justify-content: space-between;
 }
 
 .flat-card {
-  width: 100%;
-  position: relative;
-  margin: .5rem 0 1rem 0;
+  width: calc(19.6% - 20px);
   background-color: #fff;
-  border-radius: 2px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+  border-radius: 12px;
+  overflow: hidden;
+  transition: transform 0.3s ease;
 }
 
-.flat-card-image {
-  height: 180px;
-  background-position: center;
-  background-size: cover;
+.flat-card:hover {
+  transform: translateY(-15px);
 }
 
-.flat-card-content {
-  padding: 24px;
-  background-color: #F8F9FA;
-}
 
-.flat-card-actions {
+.card-img {
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
   position: relative;
-  background-color: inherit;
-  border-top: 1px solid rgba(160,160,160,0.2);
-  padding: 16px 24px;
+  overflow: hidden;
 }
 
-.flat-form {
-  background-color: #F8F9FA;
-  padding: 24px;
-  border-radius: 3px;
+.flat-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.flat-show-card {
-  background: #F8F9FA;
+.card-info {
   padding: 20px;
-  margin-bottom: 20px;
-  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-  border-radius: 3px;
 }
 
-.map {
-  height: 350px;
-  background-position: center;
-  background-size: cover;
-}
-
-.margin-top-negative {
-  margin-top: -75px;
-}
-.no-mb {
-  margin-bottom: 0;
-}
-
-.flat-show-address {
-  font-weight: 300;
+.flat-name {
+  margin-top: 0;
+  margin-bottom: 10px;
   font-size: 20px;
-  color: #333;
+}
+
+.flat-description {
+  margin-bottom: 10px;
+  max-height: 120px;
+  overflow: hidden;
+}
+
+.flat-price {
+  margin-bottom: 10px;
+}
+
+.flat-actions {
+  margin-top: auto;
+}
+
+.flat-card:focus {
+  outline: none;
+}
+
+.icon-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.icon {
+  text-align: center;
+}
+
+.icon i {
+  font-size: 24px;
+}
+
+.icon:hover i {
+  opacity: 0.5;
+}
+.flat-actions .btn {
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 20px;
+  color: #fff;
+}
+
+.btn-primary {
+  background-color: #c85268;
+  border-color: #000000;
+}
+
+.btn-primary:hover {
+  background-color: #a63c4f;
+  border-color: #000000;
+}
+
+.btn-warning {
+  background-color: #c85268;
+  border-color: #000000;
+}
+
+.btn-warning:hover {
+  background-color: #a63c4f;
+  border-color: #000000;
+}
+
+.btn-danger {
+  background-color: #c85268;
+  border-color: #000000;
+}
+
+.btn-danger:hover {
+  background-color: #a63c4f;
+  border-color: #000000;
+}
+
+.btn:hover {
+  color: #000000;
 }
