--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
 }
 
 .flat-card:hover {
-  transform: translateY(-15px);
+  transform: translateY(-10px);
 }
 
 
@@ -92,11 +92,14 @@
 
 .icon i {
   font-size: 24px;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
 }
 
 .icon:hover i {
-  opacity: 0.5;
+  opacity: 10;
 }
+
 .flat-actions .btn {
   font-size: 14px;
   padding: 5px 10px;
