--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -32,7 +32,6 @@
   transform: translateY(-10px);
 }
 
-
 .card-img {
   width: 100%;
   height: 0;
@@ -108,35 +107,45 @@
 }
 
 .btn-primary {
-  background-color: #c85268;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn-primary:hover {
-  background-color: #a63c4f;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn-warning {
-  background-color: #c85268;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn-warning:hover {
-  background-color: #a63c4f;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn-danger {
-  background-color: #c85268;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn-danger:hover {
-  background-color: #a63c4f;
+  background-color: #41bba7;
   border-color: #000000;
 }
 
 .btn:hover {
   color: #000000;
+}
+
+.heart-icon svg path {
+  transition: fill 0.3s;
+}
+.heart-icon:hover svg path {
+  fill: rgb(235, 77, 103);
+}
+.heart-icon.active svg path {
+  fill: rgb(235, 77, 103);
 }
