--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -178,3 +178,31 @@ footer {
   width: 180px;
   height: auto;
 }
+
+/* Avatar icon */
+.avatar {
+  width: 50px;
+  height: 50px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin-right: 40px;
+}
+
+.avatar {
+  position: relative;
+  margin-left: 20px;
+}
+
+.lines {
+  position: absolute;
+  top: 50%;
+  left: -40px;
+  transform: translateY(-50%);
+}
+
+.line {
+  width: 20px;
+  height: 2px;
+  background-color: black;
+  margin-bottom: 3px;
+}
